# aoc

./: .gitignore  .nvimrc  .vimspector.json  CMakeLists.txt  Cargo.toml  README.md  compile_commands.json  cubes.js  d10.input.prod  d11.input.prod  d12.input.prod  d12.input.test2  d13.input.prod  d13.input.prod2  d13.input.test  d14.input.prod  d16.input.prod  d16.input.test  d17.input.prod  d18.input.prod  d18.input.test  d2  d3  d4  d4.input.prod  d4.input.test  d5  day3.js  day4.js  day5.js  dune-project  end  go.mod  hardhat.config.js  main  out  outout  package.json  readme.md  results  (+4 more)
src/: CMakeLists.txt  day1.input  day1.rs  day1.test  day1.ts  day10.input  day2.input  day2.rs  day3.input  day3_1.rs  day3_2.rs  day4.rs  day5.input  day5_1.rs  day5_2.rs  day6.input  day6.rs  day7.input  day7.rs  day8.input  day8_1.rs  day8_2.rs  day9.input  day9.rs  day9_2.rs  main.rs  test.ts
src/day1/: CMakeLists.txt  day1.cpp  main.go
src/day10/: CMakeLists.txt  main.2.cpp  main.cpp
src/day11/: CMakeLists.txt  main.2.cpp  main.cpp
src/day12/: CMakeLists.txt  main.cpp  main2.cpp
src/day13/: CMakeLists.txt  index.ts  main.cpp  main2.cpp  main3.cpp  main4.cpp
src/day14/: CMakeLists.txt  main.cpp
src/day15/: CMakeLists.txt  main.cpp  main2.cpp
src/day16/: CMakeLists.txt  main.cpp
src/day17/: CMakeLists.txt  main.cpp
src/day18/: CMakeLists.txt  main.cpp
src/day19/: CMakeLists.txt  main.cpp
src/day2/: CMakeLists.txt  day2.cpp  main.go
src/day3/: index.p1.ts  index.ts
src/day4/: main.go
src/day5/: d5.sh  input.prod  input.test
src/day6/: CMakeLists.txt  main.cpp
src/day7/: input.prod  p1.ts  p2.ts
src/day8/: day8.py  day8.ts  (+1 more)
(+6 files in other folders)
