# add_executable(day13 main.cpp)
# add_executable(day13_2 main2.cpp)
# add_executable(day13_3 main3.cpp)
add_executable(day13 main4.cpp)

# find_package(Threads REQUIRED)
#
# target_link_libraries(day13_3 PUBLIC
#     ${EXTRA_LIBS}
#     Threads::Threads
# )

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
